--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,8 @@
       "js": [
         "src/jquery.min.js",
         "src/inject.js"
-      ]
+      ],
+      "all_frames": true
     }
   ],
   "permissions": [
